[package]
name = "roguelike-analytics-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32.1", features = ["bundled", "unlock_notify", "chrono", "functions"] }
uuid = { version = "1", features = ["v4" ] }
once_cell = "1.17"
parking_lot = "0.12"
env_logger = "0.10"
log = "0.4"
tokio = "1.41.0"
dotenv = "0.15.0"
